--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-﻿altgraph==0.17.2
-autopep8==1.5.7
-future==0.18.3
-inputimeout==1.0.4
-numpy==1.21.2
-pefile==2021.9.3
-pycodestyle==2.7.0
-pyinstaller==4.5.1
-pyinstaller-hooks-contrib==2021.3
-pywin32-ctypes==0.2.0
-toml==0.10.2
+﻿altgraph>=0.17.2
+autopep8>=1.5.7
+future>=0.18.3
+inputimeout>=1.0.4
+numpy>=1.21.2
+pefile>=2021.9.3
+pycodestyle>=2.7.0
+pyinstaller>=5.13.1
+pyinstaller-hooks-contrib>=2021.3
+pywin32-ctypes>=0.2.0
+toml>=0.10.2
